--- a/Style1.css
+++ b/Style1.css
@@ -17,7 +17,7 @@ body{
     flex-direction: row;
     box-shadow: 2px 2px 5px #000000;
 }
-.home{
+.index{
     margin-left: 20px;
     padding: 10px;
 }
